private ip in env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=centralindia-server.database.windows.net
+DB_HOST=10.1.2.4
 DB_USER=sqladmin
 DB_PASS=Password@123
 DB_NAME=centralindia-db01
