--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_HOST=10.1.2.4
 DB_USER=sqladmin
 DB_PASS=Password@123
 DB_NAME=centralindia-db01
-DB_CONNECTION_STRING="Server=tcp:centralindia-server01.database.windows.net,1433;Initial Catalog=centralindia-db01;Persist Security Info=False;User ID=sqladmin;Password=Passrd@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+DB_CONNECTION_STRING="Server=tcp:centralindia-server01.database.windows.net,1433;Initial Catalog=centralindia-db01;Persist Security Info=False;User ID=sqladmin;Password=Password@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
